--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <section>
     <header>
-      <img src="">
+      <img src="https://images.unsplash.com/photo-1569012871812-f38ee64cd54c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80">
       <h1>Lila Lamb - Web Dev</h1>
       <h2>Technology is my jam!</h2>
       <p> Occasionally I have time to work on side projects. If you're interested, let me know by signing up on this website.</p>
