--- a/index.html
+++ b/index.html
@@ -16,27 +16,40 @@
 <body>
   <section>
     <header>
-      <img src="https://images.unsplash.com/photo-1569012871812-f38ee64cd54c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80">
-      <h1>Lila Lamb - Web Dev</h1>
-      <h2>Technology is my jam!</h2>
-      <p> Occasionally I have time to work on side projects. If you're interested, let me know by signing up on this website.</p>
-      <button>Let's Team Up</button>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
-    <section class="middle-content"></section>
+    <section class="top-content">
+      <div class="top-one">
+        <img src="https://images.unsplash.com/photo-1569012871812-f38ee64cd54c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80">
+        <h1>Lila Lamb - Web Dev</h1>
+        <h2>Technology is my jam!</h2>
+      </div>
+      <div class="top-two">
+        <p> Occasionally I have time to work on side projects. If you're interested, let me know by signing up on this website.</p>
+        <button>Let's Team Up</button>
+    </div>
+  </section>
+    <section class="middle-content">
       <div>
         <h2>Listen Up...</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum malesuada tempus ex, nec posuere tellus hendrerit nec. Aenean tristique nibh vitae eleifend pellentesque. Praesent rutrum neque id libero aliquet finibus. Quisque venenatis turpis sed est volutpat, ac iaculis velit vestibulum. Mauris auctor viverra lectus quis maximus. Praesent placerat lectus bibendum, interdum elit ac, ullamcorper risus. Sed vitae felis enim. Vestibulum aliquet sagittis ex, maximus aliquam ex mattis eget. Donec ac risus molestie, vestibulum diam nec, molestie est. Suspendisse tempus dignissim nibh, vel feugiat nisi varius et. Aenean non augue nec dui tincidunt lacinia ac quis ipsum. Ut eu ante et tortor consectetur sodales. Aliquam laoreet congue accumsan. Nulla nec rutrum tellus, sit amet suscipit metus. Donec id justo sodales, fermentum nibh eget, faucibus arcu. Mauris molestie tortor libero, in aliquet ex gravida a. </p>
       </div>
       <div>
         <h2>Stuff I'm good at:</h2>
-        <ul>Cheesemaking</ul>
-        <ul>Brazilian jiu-jitsu</ul>
-        <ul>Karaoke</ul>
-        <ul>Herping</ul>
-        <ul>Tarot</ul>
+        <p>Cheesemaking</p>
+        <p>Brazilian jiu-jitsu</p>
+        <p>Karaoke</p>
+        <p>Herping</p>
+        <p>Tarot</p>
       </div>
+    </section>
   <section class="bottom-content">
-    <table style="width:100%">
+    <table style="width:80%">
       <tr>
         <th>Years</th>
         <th>Company</th>
