Cleaned up HTML

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <section>
+  <section class="all-content">
     <header>
       <nav>
         <a href="#">Home</a>
@@ -32,8 +32,8 @@
       <div class="top-two">
         <p> Occasionally I have time to work on side projects. If you're interested, let me know by signing up on this website.</p>
         <button>Let's Team Up</button>
-    </div>
-  </section>
+      </div>
+    </section>
     <section class="middle-content">
       <div>
         <h2>Listen Up...</h2>
@@ -48,34 +48,34 @@
         <p>Tarot</p>
       </div>
     </section>
-  <section class="bottom-content">
-    <table style="width:80%">
-      <tr>
-        <th>Years</th>
-        <th>Company</th>
-        <th>Title</th>
-        <th>Tech Used</th>
-      </tr>
-      <tr>
-        <td>1</td>
-        <td>Apple</td>
-        <td>Software Engineer</td>
-        <td>Swift</td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td>Microsoft</td>
-        <td>Computer Scientist</td>
-        <td>.NET</td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td>Amazon</td>
-        <td>Dev Ops</td>
-        <td>AWS</td>
-      </tr>
-    </table>
-  </section>
+    <section class="bottom-content">
+      <table style="width:80%">
+        <tr>
+          <th>Years</th>
+          <th>Company</th>
+          <th>Title</th>
+          <th>Tech Used</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Apple</td>
+          <td>Software Engineer</td>
+          <td>Swift</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Microsoft</td>
+          <td>Computer Scientist</td>
+          <td>.NET</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Amazon</td>
+          <td>Dev Ops</td>
+          <td>AWS</td>
+        </tr>
+      </table>
+    </section>
     <footer>
       <h3>Copyright Awesomeness 2020</h3>
     </footer>
